--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -39,42 +40,36 @@
 
     <section id="projects">
       <h2>Projects</h2>
-      <ul>
-        <li>
-          <article>
-            <h3>Library management system</h3>
-            <p>Class 12 project to track books, users, and borrow history using Python and MySQL.
-.</p>
-          </article>
-        </li>
-      </ul>
+      <div class="grid">
+        <div class="project-card">
+          <h3>Library Management System</h3>
+          <p>Class 12 project to track books, users, and borrow history using Python and MySQL.</p>
+        </div>
+        <div class="project-card">
+          <h3>Library Inventory Manager</h3>
+          <p>1st sem python assignment - A creative engagement system for people to add, issues and check availaibility of books.</p>
+        </div>
+        <div class="project-card">
+          <h3>Gradebook analyzer</h3>
+          <p>A Python CLI tool that automates collecting marks, computing statistics, and assigning grades for educators, bypassing spreadsheets.</p>
+        </div>
+        <div class="project-card">
+          <h3>Calorie tracker</h3>
+          <p>A tool to help log meals, count calories, and check against daily limit.</p>
+        </div>
+      </div>
     </section>
+
 
     <section id="skills">
       <h2>Technical Skills</h2>
-      <table border="1" cellspacing="0" cellpadding="8">
-        <thead>
-          <tr>
-            <th>Category</th>
-            <th>Tools & Technologies</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Programming</td>
-            <td>Python, MySQL</td>
-          </tr>
-          <tr>
-            <td>Data Science</td>
-            <td>Pandas, NumPy, Matplotlib</td>
-          </tr>
-          <tr>
-            <td>Web Development</td>
-            <td>HTML</td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="grid">
+        <div class="skill-card">Python, MySQL</div>
+        <div class="skill-card">Pandas, NumPy, Matplotlib</div>
+        <div class="skill-card">HTML, CSS, JavaScript</div>
+      </div>
     </section>
+
    
     <section id="contact">
       <h2>Contact Me</h2>
@@ -91,6 +86,7 @@
         <button type="submit">Send Message</button>
       </form>
     </section>
+
   </main>
 
   <footer>
